--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
     "env": {
         "node": true,
         "jest": true
+    },
+    "rules" : {
+        "linebreak-style": 0,
+        "no-console": "off"
     }
 }
