removed console and removed space from divelement

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
         "jest": true
     },
     "rules":{
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "no-console": 0
+        
     }
 }
