--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
-    "extends": "airbnb-base",
-    "env": {
-        "node": true,
-        "jest": true
-    }
+  "extends": "airbnb-base",
+  "env": {
+    "node": true,
+    "jest": true
+  },
+  "rules": {
+    "linebreak-style": 0
+  }
 }
