--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "week1",
   "version": "1.0.0",
   "description": "Week 1 Assignment",
-  "main": "index.js",
+  "main": "./src/timer/runTimer.js",
   "scripts": {
-    "test": "eslint ./src && jest"
+    "test": "eslint ./src && jest",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/src/timer/runTimer.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^4.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.11.0",
+    "express": "^4.16.3",
+    "jest": "^22.4.3",
+    "node-uuid": "^1.4.8",
+    "rimraf": "^2.6.2"
+  },
+  "dependencies": {
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "jest": "^22.4.3"
+    "react": "^16.3.2"
   }
 }
