--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
         "jest": true
     },
     "rules": {
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "no-console": "off"
     }
 }
